# LUMD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: common.h  matrix.h
include/lu/: lu.h  mpi.h  omp.h  single.h
src/: common.c  main.c  matrix.c  matrix.h
src/lu/: mpi.c  omp.c  openmp.c  single.c
test/: matrix_test.cpp
